--- a/pokemon_app/src/PokeCard.css
+++ b/pokemon_app/src/PokeCard.css
@@ -8,7 +8,13 @@
 	padding: 10px;
 	border: 1px solid;
 	margin: 1rem;
-	box-shadow: 7px 10px 12px -5px rgba(0,0,0,0.56)
+	box-shadow: 7px 10px 12px -5px rgba(0,0,0,0.56);
+	min-width: 200px;
+}
+
+.PokeCard_details *{
+	margin:0px;
+	padding: 0px;
 }
 
 img{
