--- a/React/app_runner/src/DadJokesApp.css
+++ b/React/app_runner/src/DadJokesApp.css
@@ -1,3 +1,16 @@
 .DadJokesApp{
     font-family: "Comic Sans MS";
 }
+
+.rotate{
+    animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
